@@ -42,6 +42,7 @@
 
 /Makefile.in
 /examples/Makefile.in
+/fixtures/Makefile.in
 /include/Makefile.in
 /libc/Makefile.in
 /libc/include/Makefile.in
@@ -77,12 +78,22 @@
 
 /Makefile
 /examples/Makefile
+/fixtures/Makefile
 /include/Makefile
 /libc/Makefile
 /libc/include/Makefile
 /tests/Makefile
 
 /include/kernaux/version.h
+
+/fixtures/multiboot2_bin_examples_gen
+/fixtures/multiboot2_bin_examples_gen.c
+/fixtures/multiboot2_header_example0.bin
+/fixtures/multiboot2_header_example1.bin
+/fixtures/multiboot2_header_example2.bin
+/fixtures/multiboot2_info_example0.bin
+/fixtures/multiboot2_info_example1.bin
+/fixtures/multiboot2_info_example2.bin
 
 /examples/assert
 /examples/cmdline
