@@ -91,8 +91,9 @@ KernAux::Version.with_cmdline? and RSpec.describe KernAux, '.cmdline' do
     end
   end
 
-  context 'using common tests' do
-    cmdline_yml = File.expand_path('../../../../../common/cmdline.yml', __dir__)
+  context 'using fixtures' do
+    cmdline_yml =
+      File.expand_path('../../../../../fixtures/cmdline.yml', __dir__)
 
     YAML.safe_load_file(cmdline_yml).each do |test|
       escape_str = lambda do |str|
