@@ -14,7 +14,7 @@ multiboot2_header_print0_LDADD = $(top_builddir)/libkernaux.la
 multiboot2_header_print0_SOURCES = \
 	main.c \
 	multiboot2_header_print0.c \
-	multiboot2_header_example0.h
+	../fixtures/multiboot2_header_example0.h
 endif
 
 ############################
@@ -27,7 +27,7 @@ multiboot2_header_print1_LDADD = $(top_builddir)/libkernaux.la
 multiboot2_header_print1_SOURCES = \
 	main.c \
 	multiboot2_header_print1.c \
-	multiboot2_header_example1.h
+	../fixtures/multiboot2_header_example1.h
 endif
 
 ############################
@@ -40,7 +40,7 @@ multiboot2_header_print2_LDADD = $(top_builddir)/libkernaux.la
 multiboot2_header_print2_SOURCES = \
 	main.c \
 	multiboot2_header_print2.c \
-	multiboot2_header_example2.h
+	../fixtures/multiboot2_header_example2.h
 endif
 
 ##########################
@@ -53,7 +53,7 @@ multiboot2_info_print0_LDADD = $(top_builddir)/libkernaux.la
 multiboot2_info_print0_SOURCES = \
 	main.c \
 	multiboot2_info_print0.c \
-	multiboot2_info_example0.h
+	../fixtures/multiboot2_info_example0.h
 endif
 
 ##########################
@@ -66,7 +66,7 @@ multiboot2_info_print1_LDADD = $(top_builddir)/libkernaux.la
 multiboot2_info_print1_SOURCES = \
 	main.c \
 	multiboot2_info_print1.c \
-	multiboot2_info_example1.h
+	../fixtures/multiboot2_info_example1.h
 endif
 
 ##########################
@@ -79,7 +79,7 @@ multiboot2_info_print2_LDADD = $(top_builddir)/libkernaux.la
 multiboot2_info_print2_SOURCES = \
 	main.c \
 	multiboot2_info_print2.c \
-	multiboot2_info_example2.h
+	../fixtures/multiboot2_info_example2.h
 endif
 
 ##################
@@ -121,7 +121,7 @@ test_cmdline_gen_SOURCES = \
 	test_cmdline_gen.c \
 	cmdline_gen.py \
 	cmdline_gen.jinja \
-	$(top_srcdir)/common/cmdline.yml \
+	$(top_srcdir)/fixtures/cmdline.yml \
 	cmdline_test.h \
 	cmdline_test.c
 endif
@@ -129,8 +129,8 @@ endif
 
 CLEANFILES += test_cmdline_gen.c
 
-test_cmdline_gen.c: $(top_srcdir)/tests/cmdline_gen.py $(top_srcdir)/tests/cmdline_gen.jinja $(top_srcdir)/common/cmdline.yml
-	$(PYTHON) $(top_srcdir)/tests/cmdline_gen.py $(top_srcdir)/tests/cmdline_gen.jinja $(top_srcdir)/common/cmdline.yml test_cmdline_gen.c
+test_cmdline_gen.c: $(top_srcdir)/tests/cmdline_gen.py $(top_srcdir)/tests/cmdline_gen.jinja $(top_srcdir)/fixtures/cmdline.yml
+	$(PYTHON) $(top_srcdir)/tests/cmdline_gen.py $(top_srcdir)/tests/cmdline_gen.jinja $(top_srcdir)/fixtures/cmdline.yml test_cmdline_gen.c
 
 ############
 # test_elf #
@@ -190,8 +190,8 @@ test_multiboot2_common_packing_LDADD = $(top_builddir)/libkernaux.la
 test_multiboot2_common_packing_SOURCES = \
 	main.c \
 	test_multiboot2_common_packing.c \
-	multiboot2_header_example2.h \
-	multiboot2_info_example2.h
+	../fixtures/multiboot2_header_example2.h \
+	../fixtures/multiboot2_info_example2.h
 endif
 
 ##################################
@@ -204,8 +204,8 @@ test_multiboot2_header_helpers_LDADD = $(top_builddir)/libkernaux.la
 test_multiboot2_header_helpers_SOURCES = \
 	main.c \
 	test_multiboot2_header_helpers.c \
-	multiboot2_header_example1.h \
-	multiboot2_header_example2.h
+	../fixtures/multiboot2_header_example1.h \
+	../fixtures/multiboot2_header_example2.h
 endif
 
 ################################
@@ -234,8 +234,8 @@ test_multiboot2_header_validation_LDADD = $(top_builddir)/libkernaux.la
 test_multiboot2_header_validation_SOURCES = \
 	main.c \
 	test_multiboot2_header_validation.c \
-	multiboot2_header_example1.h \
-	multiboot2_header_example2.h
+	../fixtures/multiboot2_header_example1.h \
+	../fixtures/multiboot2_header_example2.h
 endif
 
 ################################
@@ -248,8 +248,8 @@ test_multiboot2_info_helpers_LDADD = $(top_builddir)/libkernaux.la
 test_multiboot2_info_helpers_SOURCES = \
 	main.c \
 	test_multiboot2_info_helpers.c \
-	multiboot2_info_example1.h \
-	multiboot2_info_example2.h
+	../fixtures/multiboot2_info_example1.h \
+	../fixtures/multiboot2_info_example2.h
 endif
 
 ##############################
@@ -278,8 +278,8 @@ test_multiboot2_info_validation_LDADD = $(top_builddir)/libkernaux.la
 test_multiboot2_info_validation_SOURCES = \
 	main.c \
 	test_multiboot2_info_validation.c \
-	multiboot2_info_example1.h \
-	multiboot2_info_example2.h
+	../fixtures/multiboot2_info_example1.h \
+	../fixtures/multiboot2_info_example2.h
 endif
 
 #############
@@ -359,14 +359,14 @@ test_printf_fmt_gen_SOURCES = \
 	test_printf_fmt_gen.c \
 	printf_fmt_gen.py \
 	printf_fmt_gen.jinja \
-	$(top_srcdir)/common/printf_fmt.yml
+	$(top_srcdir)/fixtures/printf_fmt.yml
 endif
 endif
 
 CLEANFILES += test_printf_fmt_gen.c
 
-test_printf_fmt_gen.c: $(top_srcdir)/tests/printf_fmt_gen.py $(top_srcdir)/tests/printf_fmt_gen.jinja $(top_srcdir)/common/printf_fmt.yml
-	$(PYTHON) $(top_srcdir)/tests/printf_fmt_gen.py $(top_srcdir)/tests/printf_fmt_gen.jinja $(top_srcdir)/common/printf_fmt.yml test_printf_fmt_gen.c
+test_printf_fmt_gen.c: $(top_srcdir)/tests/printf_fmt_gen.py $(top_srcdir)/tests/printf_fmt_gen.jinja $(top_srcdir)/fixtures/printf_fmt.yml
+	$(PYTHON) $(top_srcdir)/tests/printf_fmt_gen.py $(top_srcdir)/tests/printf_fmt_gen.jinja $(top_srcdir)/fixtures/printf_fmt.yml test_printf_fmt_gen.c
 
 ###################
 # test_printf_gen #
@@ -381,15 +381,15 @@ test_printf_gen_SOURCES = \
 	test_printf_gen.c \
 	printf_gen.py \
 	printf_gen.jinja \
-	$(top_srcdir)/common/printf.yml \
-	$(top_srcdir)/common/printf_orig.yml
+	$(top_srcdir)/fixtures/printf.yml \
+	$(top_srcdir)/fixtures/printf_orig.yml
 endif
 endif
 
 CLEANFILES += test_printf_gen.c
 
-test_printf_gen.c: $(top_srcdir)/tests/printf_gen.py $(top_srcdir)/tests/printf_gen.jinja $(top_srcdir)/common/printf.yml $(top_srcdir)/common/printf_orig.yml
-	$(PYTHON) $(top_srcdir)/tests/printf_gen.py $(top_srcdir)/tests/printf_gen.jinja $(top_srcdir)/common/printf.yml $(top_srcdir)/common/printf_orig.yml test_printf_gen.c
+test_printf_gen.c: $(top_srcdir)/tests/printf_gen.py $(top_srcdir)/tests/printf_gen.jinja $(top_srcdir)/fixtures/printf.yml $(top_srcdir)/fixtures/printf_orig.yml
+	$(PYTHON) $(top_srcdir)/tests/printf_gen.py $(top_srcdir)/tests/printf_gen.jinja $(top_srcdir)/fixtures/printf.yml $(top_srcdir)/fixtures/printf_orig.yml test_printf_gen.c
 
 ####################
 # test_units_human #
