@@ -4,8 +4,8 @@
 
 #include <kernaux/multiboot2.h>
 
-#include "multiboot2_header_example1.h"
-#include "multiboot2_header_example2.h"
+#include "../fixtures/multiboot2_header_example1.h"
+#include "../fixtures/multiboot2_header_example2.h"
 
 void test_main()
 {
